Simplified the project a bit by compiling engine components into one file and removing unnecessary headers

--- a/index.htm
+++ b/index.htm
@@ -25,19 +25,10 @@
     <!--  TwitchJS online header -->
     <script src="Twitch/twitch.js"></script>
     <script src="Twitch/TwitchController.js"></script>
-
-    <!-- Components (Generic) -->
-    <script src="Components/Generic/Container.js"></script>
-    <script src="Components/Generic/DropDown.js"></script>
-    <script src="Components/Generic/Fontawesome.js"></script>
-    <script src="Components/Generic/Label.js"></script>
-    <script src="Components/Generic/Image.js"></script>
-    <script src="Components/Generic/Modal.js"></script>
-    <script src="Components/Generic/PrimaryButton.js"></script>
-    <script src="Components/Generic/FileInput.js"></script>
-    <script src="Components/Generic/TextInput.js"></script>
+    <script src="Twitch/TwitchURLVars.js"></script>
 
     <!-- Site Parts -->
+    <script src="SiteParts/ArcadiaJS.js"></script>
     <script src="SiteParts/LoginBox.js"></script>
     <script src="SiteParts/SiteHeader.js"></script>
     <script src="SiteParts/SiteMainArea.js"></script>
@@ -47,10 +38,6 @@
     <script src="Screens/ControlScreen.js"></script>
     <script src="Screens/TwitchChatScreen.js"></script>
 
-    <!-- Data -->
-    <script src="Data/TwitchData.js"></script>
-
-    <script src="configStyle.js"></script>
     <script src="index.js"></script>
 </head>
 
