--- a/index.htm
+++ b/index.htm
@@ -32,15 +32,21 @@
     <script src="SiteParts/LoginBox.js"></script>
     <script src="SiteParts/SiteHeader.js"></script>
     <script src="SiteParts/SiteMainArea.js"></script>
-    <script src="SiteParts/Checkbox.js"></script>
+    <script src="SiteParts/SoundToggle.js"></script>
 
     <!-- Screens -->
     <script src="Screens/ControlScreen.js"></script>
-    <script src="Screens/TwitchChatScreen.js"></script>
+    <script src="Screens/ScreenChooser.js"></script>
+    <script src="Screens/SoundTogglesScreen.js"></script>
+
+    <!-- Sounds -->
+    <script src="Sounds/_SoundList.js"></script>
 
     <script src="index.js"></script>
 </head>
 
-<body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)"></body>
+<body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)">
+    <script src="http://www.youtube.com/player_api"></script>
+</body>
 
 </html>
