- Added a try/catch around Twitch channel connection - Added a folder specification so we can move the project online - Fixed a bug where a sound failing to play because it does not exist would still result in a new toggle entry

--- a/index.htm
+++ b/index.htm
@@ -35,7 +35,7 @@
     <script src="SiteParts/SoundToggle.js"></script>
 
     <!-- Screens -->
-    <script src="Screens/ControlScreen.js"></script>
+    <script src="Screens/SoundActivityScreen.js"></script>
     <script src="Screens/ScreenChooser.js"></script>
     <script src="Screens/SoundTogglesScreen.js"></script>
 
