- Updated the hidden Youtube player to work with the newest API data from Google

--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
 </head>
 
 <body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)">
-    <script src="http://www.youtube.com/player_api"></script>
+    <div id="player" style="display:none"></div>
 </body>
 
 </html>
