- Updated _SoundList.js to SoundsList.js to be loaded correctly (underscore was messing it up?)

--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
     <script src="Screens/SoundTogglesScreen.js"></script>
 
     <!-- Sounds -->
-    <script src="Sounds/_SoundList.js"></script>
+    <script src="Sounds/SoundsList.js"></script>
 
     <script src="index.js"></script>
 </head>
