--- a/index.htm
+++ b/index.htm
@@ -47,6 +47,7 @@
 
 <body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)">
     <div id="player" style="display:none"></div>
+    <audio controls id="audio_player" style="display: none"></audio>
 </body>
 
 </html>
