- Returning to the old method of playing sound files... will have to figure out playing local harddrive files later

--- a/index.htm
+++ b/index.htm
@@ -46,8 +46,7 @@
 </head>
 
 <body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)">
-    <div id="player" style="display:none"></div>
-    <audio controls id="audio_player" style="display: none"></audio>
+    <div id="player" style="display:none"></div>=
 </body>
 
 </html>
