--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
 </head>
 
 <body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)">
-    <div id="player" style="display:none"></div>=
+    <div id="player" style="display:none"></div>
 </body>
 
 </html>
