- Added a system options screen where you can limit sounds to only play when certain users toggle them (subs, mods, etc)

--- a/index.htm
+++ b/index.htm
@@ -38,6 +38,7 @@
     <script src="Screens/SoundActivityScreen.js"></script>
     <script src="Screens/ScreenChooser.js"></script>
     <script src="Screens/SoundTogglesScreen.js"></script>
+    <script src="Screens/SystemOptionsScreen.js"></script>
 
     <!-- Sounds -->
     <script src="Sounds/SoundsList.js"></script>
