--- a/index.htm
+++ b/index.htm
@@ -46,8 +46,6 @@
     <script src="index.js"></script>
 </head>
 
-<body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)">
-    <div id="player" style="display:none"></div>
-</body>
+<body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)"></body>
 
 </html>
