--- a/index.htm
+++ b/index.htm
@@ -42,10 +42,10 @@
     <script src="Screens/SoundTogglesScreen.js"></script>                       <!-- LOCAL -->
     <script src="Screens/SystemOptionsScreen.js"></script>                      <!-- LOCAL -->
                                                                                 <!-- REMOVE -->
+    <script src="index.js"></script>                                            <!-- LOCAL -->
+                                                                                <!-- REMOVE -->
     <!-- Sounds -->                                                             <!-- REMOVE -->
-    <script src="Sounds/SoundsList.js"></script>                                <!-- TODO: convert this to json --> 
-
-    <!-- LOCAL --><script src="index.js"></script>
+    <script src="SoundsList.js"></script>
 </head>
 
 <body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)"></body>
