- Removed all LoginBox implementation, auto-login is now the only way to use the system - Replaced SoundsList.js with Settings.js

--- a/index.htm
+++ b/index.htm
@@ -26,11 +26,9 @@
     <!--  TwitchJS online header -->                                            <!-- REMOVE -->
     <script src="Twitch/twitch.js"></script>                                    <!-- LOCAL -->
     <script src="Twitch/TwitchController.js"></script>                          <!-- LOCAL -->
-    <script src="Twitch/TwitchURLVars.js"></script>                             <!-- LOCAL -->
                                                                                 <!-- REMOVE -->
     <!-- Site Parts -->                                                         <!-- REMOVE -->
     <script src="SiteParts/ArcadiaJS.js"></script>                              <!-- LOCAL -->
-    <script src="SiteParts/LoginBox.js"></script>                               <!-- LOCAL -->
     <script src="SiteParts/SiteHeader.js"></script>                             <!-- LOCAL -->
     <script src="SiteParts/SiteMainArea.js"></script>                           <!-- LOCAL -->
     <script src="SiteParts/SoundToggle.js"></script>                            <!-- LOCAL -->
@@ -44,7 +42,7 @@
     <script src="index.js"></script>                                            <!-- LOCAL -->
                                                                                 <!-- REMOVE -->
     <!-- Sounds -->                                                             <!-- REMOVE -->
-    <script src="SoundsList.js"></script>
+    <script src="Settings.js"></script>
 </head>
 
 <body onload="LoadSiteContent()" style="margin: 0px; background-color: rgb(0, 0, 0)"></body>
